# catbird-mls

./: .gitignore  ANDROID_BUILD_GUIDE.md  CLAUDE.md  Cargo.toml  MLSFFIFFI.h  MLSLoggerImplementation.swift  build-android.sh  build-ios.sh  build.rs  build_all.sh  build_ios.sh  create-xcframework.sh  uniffi.toml  verify_completion.sh
.cargo/: config.toml
_trash/: group_metadata.rs.phaseF
docs/: cross-language-guide.md
docs/plans/: 2026-03-06-encrypted-group-metadata.md
docs/superpowers/specs/: 2026-03-12-encrypted-group-metadata-v2-design.md
scripts/: generate-python-bindings.sh
scripts/python-package/: README.md  __init__.py  setup.py
src/: api.rs  api.rs.backup  atproto_bytes.rs  blob_crypto.rs  bridge_mappers.rs  catbird_mls.rs  client.rs  client_bridge.rs  epoch_storage.rs  error.rs  ffi.rs  group_metadata.rs  high_level_contract.rs  hybrid_storage.rs  keychain.rs  lib.rs  logging.rs  metadata.rs  mls_context.rs  orchestrator_bridge.rs  types.rs  voice.rs  wasm_client.rs
src/orchestrator/: api_client.rs  constants.rs  credentials.rs  crypto_provider.rs  devices.rs  error.rs  groups.rs  key_packages.rs  messaging.rs  mls_provider.rs  mod.rs  orchestrator.rs  ordering.rs  recovery.rs  staged_commit.rs  storage.rs  sync.rs  types.rs
tests/: README.md  create_group_with_id_test.rs  e2e_harness.rs  external_commit_epoch_test.rs  group_metadata_e2e_test.rs  group_metadata_test.rs  member_removal_test.rs  mock_api_client.rs  mock_credentials.rs  mock_storage.rs  persistence_repro.rs  recovery_tracker_tests.rs  reset_requested_event_test.rs  staged_commit_tests.rs  state_machine_tests.rs  test_python_bindings.py  two_user_messaging_test.rs
