[package]
name = "catbird_mls"
version = "0.1.0"
edition = "2021"
authors = ["Catbird Team"]
description = "Unified MLS SDK for Catbird — OpenMLS operations, orchestration, and UniFFI bindings"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
# OpenMLS 0.8.0 — major upgrade from 0.7.2
# Breaking changes handled:
# - ProcessMessageError now includes StorageError variant
# - Group creation fails if GroupId already exists in storage
# - join_by_external_commit deprecated → use external_commit_builder
# - ProposalType, ExtensionType, CredentialType enums have Grease(u16) variant
openmls = { version = "0.8", features = ["test-utils"] }
openmls_traits = "0.5"
openmls_basic_credential = "0.5"
openmls_libcrux_crypto = "0.3"
openmls_rust_crypto = { version = "0.5", features = ["test-utils"] }
openmls_memory_storage = { version = "0.5", features = ["test-utils"] }
openmls_sqlite_storage = "0.2"
rusqlite = { version = "0.32", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tls_codec = "0.4"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
uuid = { version = "1.11", features = ["v4"] }
uniffi = { version = "0.28", features = ["cli"] }
once_cell = "1.21"
lazy_static = "1.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
scopeguard = "1.2"
tracing = "0.1"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
# Android-specific feature flag (currently unused but reserved for future Android-specific code)
android = []

[target.'cfg(not(target_os = "android"))'.dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

[target.'cfg(target_os = "android")'.dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }

[profile.release]
debug = true  # Generate debug symbols for dSYM creation
