[package]
name = "catbird_mls"
version = "0.1.0"
edition = "2021"
authors = ["Catbird Team"]
description = "Unified MLS SDK for Catbird — OpenMLS operations, orchestration, and UniFFI bindings"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bin]]
name = "echo-bot"
path = "src/bin/echo_bot.rs"
required-features = ["echo-bot"]

[dependencies]
catbird-atproto = { path = "../catbird-atproto" }
# OpenMLS 0.8.0 — major upgrade from 0.7.2
# Breaking changes handled:
# - ProcessMessageError now includes StorageError variant
# - Group creation fails if GroupId already exists in storage
# - join_by_external_commit deprecated → use external_commit_builder
# - ProposalType, ExtensionType, CredentialType enums have Grease(u16) variant
openmls = { version = "0.8", features = ["test-utils", "js"] }
openmls_traits = "0.5"
openmls_basic_credential = "0.5"
openmls_libcrux_crypto = "0.3"
openmls_rust_crypto = { version = "0.5", features = ["test-utils"] }
openmls_memory_storage = { version = "0.5", features = ["test-utils"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tls_codec = "0.4"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
chacha20poly1305 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
uuid = { version = "1.11", features = ["v4", "js"] }
uniffi = { version = "0.28", features = ["cli"] }
once_cell = "1.21"
lazy_static = "1.4"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
web-time = "1.1"
scopeguard = "1.2"
tracing = "0.1"

# Optional: echo-bot binary
reqwest = { version = "0.12", features = ["json"], optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
env_logger = "0.11"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
# Android-specific feature flag (currently unused but reserved for future Android-specific code)
android = []
browser = []
# Echo bot testing binary — adds reqwest + clap + tracing-subscriber
echo-bot = ["reqwest", "clap", "tracing-subscriber"]

[target.'cfg(all(not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
openmls_sqlite_storage = "0.2"
rusqlite = { version = "0.32", default-features = false, features = ["bundled-sqlcipher"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }

[target.'cfg(all(target_os = "android", not(target_arch = "wasm32")))'.dependencies]
openmls_sqlite_storage = "0.2"
rusqlite = { version = "0.32", default-features = false, features = ["bundled-sqlcipher-vendored-openssl"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Performance", "console"] }

[profile.release]
debug = true  # Generate debug symbols for dSYM creation
